2003-11-20  Angus Leeming  <angus.leeming@btopenworld.com>

	* fd2ps/papers.c:
	* fd2ps/pscol.c:
	* fd2ps/psdraw.c:
	* fdesign/fd_control.c:
	* fdesign/fd_main.c:
	* fdesign/fd_printC.c:
	* fdesign/fd_spec.c:
	* fdesign/sp_dial.c:
	* image/image_marker.c:
	* image/image_tiff.c:
	* image/ps_core.c:
	* lib/cursor.c:
	* lib/flcolor.c: squash warnings about 'var may be uninitialized' when
	compiling with gcc -W -Wall by explicitly initializing all parts of the
	arrays in the above files.

2003-11-19  Angus Leeming  <angus.leeming@btopenworld.com>

	* autogen.sh: enable the use of autoconf 2.58.

2003-11-19  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/OS2 and all files therein: removed.

	* lib/Makefile.am: remove mention of OS2.

	* lib/Readme: removed.
	* os2move.cmd: removed.
	* gl/canvas.h: removed.

	* gl/Makefile.am: remove canvas.h.

2003-11-19  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lib/flinternal.h: remove obsolete comment

	* config/xformsinclude.m4 (XFORMS_PATH_XPM): honor X_CFLAGS to
	find xpm.h (should fix problem reported by Reed Riddle)

	* README: update. In particular, the acknowledgement of copyright
	has been removed since the code is not here anymore (and the
	advertising clause is not needed anymore). Try to point to the new
	nongnu.org site.

	* Makefile.am (dist-hook): remove old leftover from LyX
	(EXTRA_DIST): do not distribute xforms.spec, which
	is generated at configure time

	* lib/signal.c (default_signal_handler): fix typo

2003-11-14  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* config/config.guess:
	* config/config.sub:
	* config/libtool.m4:
	* config/ltmain.sh: updated from libtool 1.4.3 (as distributed
	with rh9)

	* config/depcomp: updated from automake 1.4 (as distributed
	with rh9)

2003-11-18  Angus Leeming  <angus.leeming@btopenworld.com>

	* xforms.spec.in: update the %doc list to reflect actuality.

2003-11-18  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* INSTALL: generic instructions from autoconf.
